Fix horizontal scroll issue for crosswords (#22518)
First noticed as it caused issues with viewport on iPad but seems
like a general issue.

--- a/static/src/stylesheets/module/crosswords/_layout.scss
+++ b/static/src/stylesheets/module/crosswords/_layout.scss
@@ -100,7 +100,8 @@
 .crossword__clues__gradient {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    left: 0;
+    right: 0;
     height: 120px;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
     display: none;
